...
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TableLayout
                android:id="@+id/tl_seat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="34dp"
                android:stretchColumns="*"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_selectSeat_screen_space">

                <TableRow>

                    <TextView
                        android:id="@+id/seat_A1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:paddingTop="26dp"
...
                        android:text="A1"
                        android:textColor="@color/b_seat_color"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/seat_A2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:paddingTop="26dp"
...
                        android:text="A2"
                        android:textColor="@color/b_seat_color"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/seat_A3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:paddingTop="26dp"
...
                        android:text="E3"
                        android:textColor="@color/a_seat_color"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/seat_E4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:paddingTop="26dp"
...
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_select_seat_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_select_seat_selected_ticket_price"
            app:layout_constraintEnd_toStartOf="@+id/tv_select_seat_confirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="해리 포터와 마법사의 돌" />

        <TextView
            android:id="@+id/tv_select_seat_selected_ticket_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
...
