<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="78dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/seat_selection_title"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/seat_selection_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="해리 포터와 마법사의 돌" />

    <TextView
        android:id="@+id/seat_selection_price"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/seat_selection_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seat_selection_title"
        tools:text="0원" />

    <TextView
        android:id="@+id/seat_selection_confirm"
        android:layout_width="88dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/seat_selection_confirm_enable"
        android:text="@string/seat_selection_confirm"
        android:gravity="center"
        android:enabled="false"
        android:textAppearance="@style/seat_selection_confirm"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>