...
            android:id="@+id/tv_seat_reservation_total_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="@+id/tv_seat_reservation_movie_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_seat_reservation_movie_title"
            tools:text="20,000원" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_seat_reservation_complete"
        android:layout_width="100dp"
        android:layout_height="0dp"
...
