<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_ticketing_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TicketingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/gl_form"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="340dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_launcher_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="hello"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/title_date"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_running_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="16dp"
                    android:maxLines="1"
                    android:text="@string/title_running_time"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_introduction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="16dp"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/text_minus_button"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/spinner_date"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btn_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_minus"
        tools:text="1" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/gl_form"
        app:layout_constraintBottom_toTopOf="@id/tv_count"
        app:layout_constraintStart_toStartOf="@id/btn_minus"
        app:layout_constraintEnd_toStartOf="@id/spinner_time"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/gl_form"
        app:layout_constraintBottom_toTopOf="@id/tv_count"
        app:layout_constraintStart_toEndOf="@id/spinner_date"
        app:layout_constraintEnd_toEndOf="@id/btn_plus"/>

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/text_plus_button"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintTop_toBottomOf="@id/spinner_time" />


    <Button
        android:id="@+id/btn_complete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingVertical="12dp"
        android:text="@string/text_select_seat_button"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/btn_plus" />


</androidx.constraintlayout.widget.ConstraintLayout>
